bosch-target-chart/app/assets/stylesheets/charts.scss
.chart-header {
  font-weight: 200;

  @media(max-width:767px) {
    font-size: 2rem;
  }
}

.chart.droppable {
  box-shadow: 0 0 $spacer rgba(0, 0, 0, 0.075) inset, 0 0 $spacer * 3 $theme_warning;
}

.chart-target {
  @media(min-width:768px) {
    flex: 0 0 20%;
    max-width: 20%;
  }

  @media(max-width:767px) {
    flex: 0 0 50%;
    max-width: 50%;
  }

  .remove-chart-target {
    text-decoration: none !important;
    line-height: 50%;

    &:focus {
      outline: 1px dotted theme-color("muted");
    }
  }
}

#yearSelectContainer {
  @media(min-width:767px) {
    padding-right: 0;
  }

  @media(max-width:767px) {
    padding: 0;
    margin-bottom: $spacer;
  }

  #yearSelect {
    width: 100%;
  }
}

#manageCategoriesContainer {
  @media(min-width:767px) {
    padding-right: 0;
  }

  @media(max-width:767px) {
    padding: 0;
    margin-bottom: $spacer * .5;
  }

  #manageCategories {
    @media(max-width:767px) {
      width: 100%;
    }
  }
}

#targetsSidebar {
  z-index: 100;
  max-width: 15rem;
  min-width: 15rem;
  height: 100%;

  #targetsSidebarPanel {
    right: 100%;
    min-height: 100%;
    max-height: 100%;
    overflow-y: scroll;

    .card-header {
      padding: 0;

      #targetsSidebarHeader {
        font-weight: 200;
      }
    }

    .card-body {
      margin-bottom: $spacer * 8;
    }

    .card-body {
      .targets-sidebar-department {
        &:not(:last-child) {
          padding-bottom: $spacer * .5;
          margin-bottom: $spacer * .5;
          border-bottom: 1px solid rgba(0, 0, 0, 0.125);
        }

        .targets-sidebar-department-header {
          font-weight: 200;

          button {
	    white-space: normal;
            text-decoration: none;
	    text-align: left;
          }
        }
      }
    }
  }
}

[draggable='true'] {
  -webkit-user-drag: element;
  cursor: -webkit-grab;
}

